# get_bicho

./: .gitignore  index.html  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: conn.rs  db.rs  mod.rs  web.rs
